--- a/public/login.html
+++ b/public/login.html
@@ -32,7 +32,7 @@
 
     <div class="header">
         <div class="container">
-            <a href="#" class="navbar-brand scroll-top">RateZa</a>
+            <a href="#" class="navbar-brand scroll-top">kudozo</a>
             <nav class="navbar navbar-inverse" role="navigation">
                 <div class="navbar-header">
                     <button type="button" id="nav-toggle" class="navbar-toggle" data-toggle="collapse" data-target="#main-nav">
