--- a/public/index.html
+++ b/public/index.html
@@ -60,7 +60,7 @@
                             <a href="review.html">Add Review</a>
                         </li>
                         <li>
-                            <a href="signUp.html">SignUp/Login</a>
+                            <a href="">Login</a>
                         </li>
                     </ul>
                 </div>
