--- a/public/index.html
+++ b/public/index.html
@@ -60,7 +60,10 @@
                             <a href="review.html">Add Review</a>
                         </li>
                         <li>
-                            <a href="">Login</a>
+                            <a href="/review">Review Data</a>
+                        </li>
+                        <li>
+                            <a href="http://localhost:8080/auth/google">Login</a>
                         </li>
                     </ul>
                 </div>
@@ -110,15 +113,17 @@
                             <form action="/api/viewRest" method="post">
                                 <input type="text" name="restaurant" placeholder="ex: Red Lobster">
                                 <button class="search">Search</button>
-                            </form>
+                                <!-- <div id="first"></div> -->
                         </div>
+                        </form>
+
                     </div>
                 </div>
             </div>
         </div>
     </section>
 
-    <div id="first"></div>
+
 
 
 
@@ -136,7 +141,8 @@
                         <img src="./assets/image/Longhorn-Steakhouse-Logo.jpg" alt="">
                         <div class="text-content">
                             <img src="./assets/image/Five-Star-Review-Icon.jpg" width="30px" alt="">
-                            <p>“I ordered the Peanut Butter Chocolate Cheesecake, which is considered to be a "Sweet Bites" dessert menu item because it is smaller than the regular sized desserts.”</p>
+                            <p>“I ordered the Peanut Butter Chocolate Cheesecake, which is considered to be a "Sweet Bites"
+                                dessert menu item because it is smaller than the regular sized desserts.”</p>
                         </div>
                     </div>
                 </div>
@@ -147,7 +153,8 @@
                         <div class="text-content">
 
                             <img src="./assets/image/Five-Star-Review-Icon.jpg" width="30px" alt="">
-                            <p> Food was all right. I tried to skewer a hush puppy on my fork and it was so dry it exploded like a dirt bomb.</p>
+                            <p> Food was all right. I tried to skewer a hush puppy on my fork and it was so dry it exploded like
+                                a dirt bomb.</p>
                         </div>
                     </div>
                 </div>
