--- a/public/review.html
+++ b/public/review.html
@@ -54,7 +54,7 @@
                             <a href="/review">Review Data</a>
                         </li>
                         <li>
-                            <a href="http://localhost:8080/auth/google">Login</a>
+                            <a href="http://localhost:8080/auth/google" target="_blank">Login</a>
                         </li>
                     </ul>
                 </div>
