--- a/public/index.html
+++ b/public/index.html
@@ -63,7 +63,7 @@
                             <a href="/review">Review Data</a>
                         </li>
                         <li>
-                            <a href="http://localhost:8080/auth/google">Login</a>
+                            <a href="http://localhost:8080/auth/google" target="_blank">Login</a>
                         </li>
                     </ul>
                 </div>
@@ -113,7 +113,7 @@
                             <form action="/api/viewRest" method="post">
                                 <input type="text" name="restaurant" placeholder="ex: Red Lobster">
                                 <button class="search">Search</button>
-                                <!-- <div id="first"></div> -->
+                                <div id="first"></div>
                         </div>
                         </form>
 
